welcome.lessons.welcome.array.array667.Array667.scala.error
array667:10: error: not found: value a
	return a && b && c
               ^