welcome.lessons.welcome.array.array667.Array667.scala.code
def array667(nums:Array[Int]): Int = {
	var b=false
	var c=false
	var x = 0
	for (i<- 0 to nums.length-1){
		if (nums(i)==6 && b==true)  x=x+1
		if (nums(i)==7 && b==true) x=x+1
		b =(nums(i)==6)
	}
	return a && b && c
}
